--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,18 @@ LOGO and NAV
 
 
 /********
-BODY, WRAPPER, GRID
+BODY, WRAPPER
 ********/
-
+body{
+	width:100%;
+	background-color:red;
+}
+#wrapper {
+	width:90%;
+	margin: auto;
+	border: 1px solid black;
+	background-color: red;
+}
 /********
 
-********/
-
-/********
-MEDIA QUERIES
 ********/
