--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,12 @@ body{
 	border: 1px solid black;
 	background-color: red;
 }
+.carousel{
+	border: 1px solid black;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
 /********
 
 ********/
