--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ body{
 	width:90%;
 	margin: auto;
 	border: 1px solid black;
-	background-color: red;
+	background-color: #7887AB;
 }
 .carousel{
 	border: 1px solid black;
