--- a/css/main.css
+++ b/css/main.css
@@ -4,32 +4,46 @@ HEADER, LOGO and NAV
 header{
 	width:90%;
 	padding:2%;
+	background-color: #475E5E;
+	font-family: 'Oswald', sans-serif;
+	color:white;
+}
+header a{
+	color:none;
+}
+nav ul li{
+	display:inline;
 }
 nav li{
-	display:inline;
-	margin: 0 0 5px 0;
-	background-color:rgb(0,10,0);
-	width:20px;
-	border: 1 px solid black;
+
+	font-size: 1.5em;
+
+}
+nav li > a {
+	display: none;
 }
 
 /********
-BODY, WRAPPER
+BODY, WRAPPER, FOOTER
 ********/
 body{
 }
 #wrapper {
 	width:90%;
 	margin: auto;
-	border: 1px solid black;
-	background-color: #7887AB;
+	
 }
-.carousel{
-	border: 1px solid black;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
+section{
+	width:100%;
+	margin-top: 10%;
+}
+footer{
+	margin-top:5%;
 }
 /********
-
+Global
 ********/
+a{
+	text-decoration: none;
+	color:black;
+}
