--- a/css/main.css
+++ b/css/main.css
@@ -2,25 +2,28 @@
 HEADER, LOGO and NAV
 ********/
 header{
-	width:90%;
+	width:100%;
 	padding:2%;
 	background-color: #475E5E;
 	font-family: 'Oswald', sans-serif;
 	color:white;
 }
+header h1{
+	font-size: 1.5em;
+}
 header a{
-	color:none;
+	color:white;
+	font-family: 'Oswald', sans-serif;
+	font-size: 1.25em;
 }
 nav ul li{
-	display:inline;
+	
 }
 nav li{
-
-	font-size: 1.5em;
-
-}
-nav li > a {
-	display: none;
+	display:inline;
+	margin-right:2%;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 /********
@@ -30,15 +33,46 @@ body{
 }
 #wrapper {
 	width:90%;
-	margin: auto;
+	margin-left:auto;
+	margin-right:auto;
 	
 }
 section{
 	width:100%;
 	margin-top: 10%;
 }
+.sidebar > h2{
+	width:90%;
+	height:10%;
+	background-color:#A3AEAE;
+	padding: 2%;
+	font-family: 'Oswald', sans-serif;
+	text-align:center;
+}
 footer{
+	width:100%;
+	height:10%;
+	padding: 2%;
 	margin-top:5%;
+	margin-bottom:2%;
+	background-color: #475E5E;
+	overflow:auto;
+
+}
+footer img{
+	float:left;
+	/* 
+	Context/Target=Result 
+	50/1000=5%
+
+	*/
+	width:5%;
+	height:5%;
+	margin-right:2%;
+}
+footer img:hover{
+	width:7%;
+	height:7%;
 }
 /********
 Global
