--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ header{
 	width:100%;
 	padding:2%;
 	background-color: #475E5E;
+	 box-shadow: 10px 10px 5px black;
 	font-family: 'Oswald', sans-serif;
 	color:white;
 	-webkit-border-bottom-right-radius: 10px;
@@ -65,7 +66,7 @@ footer{
 	height:10%;
 	padding: 2%;
 	margin-top:5%;
-	margin-bottom:2%;
+	margin-bottom:0;
 	background-color: #475E5E;
 	overflow:auto;
 	-webkit-border-radius: 10px;
@@ -99,6 +100,36 @@ footer img{
 footer img:hover{
 	width:7%;
 	height:7%;
+}
+
+/********
+TABLES
+********/
+table{
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:5%;
+}
+/* Zebra striping */
+tr:nth-of-type(odd) { 
+  background-color: #ccc; 
+}
+table, th{
+	border: 1px solid black;
+}
+th{
+	background-color: #336699;
+	padding:0.75%;
+	font-size: 1.25em;
+	font-family: 'Oswald', sans-serif;
+	color:white;
+}
+td{
+	padding:0.75%;
+	font-size: 1em;
+	font-family: 'Oswald', sans-serif;
+	text-align: center;
+
 }
 
 /********
