--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,8 @@ header{
 	color:white;
 }
 header h1{
-	font-size: 1.5em;
+	font-size: 1.75em;
+	font-weight: bold;
 }
 header a{
 	color:white;
@@ -58,21 +59,22 @@ section > h3{
 	font-size:1.75em;
 	font-family: 'Oswald', sans-serif;
 	text-align:center;
-	color:#000000;
+	background-color: #00b259;
+	color:white;
 	border: 1px solid black;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
 }
 article{
-	border: 1px solid black;
-	background-color: #868686;
 	padding:5%;
 	color:#000000;
 	font-family: 'Oswald', sans-serif;
 	margin-bottom:2%;
 	font-size: 1.125em;
 	line-height: 150%;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
+	text-indent: 2em;
+	
 }
 
 footer{
@@ -112,7 +114,20 @@ footer img:hover{
 	width:7%;
 	height:7%;
 }
+.alert{
+	width:100%;
+	text-align: center;
+	height:auto;
+	margin-left:auto;
+	margin-right: auto;
+}
+.alert > p{
+	font-size:1.75em;
+	font-family: 'Oswald', sans-serif;
+	color:black;
+	
 
+}
 /********
 TABLES
 ********/
@@ -126,10 +141,10 @@ tr:nth-of-type(odd) {
   background-color: #ccc; 
 }
 table, th{
-	border: 1px solid #b20000;
+	border: 1px solid #000000;
 }
 th{
-	background-color: #000000;
+	background-color: #0059b2;
 	padding:0.75%;
 	font-size: 1.25em;
 	font-family: 'Oswald', sans-serif;
@@ -144,16 +159,50 @@ td{
 }
 
 /********
-FORMS
+FORMS/BUTTONS
 ********/
+.btn{
+	color:#00b259;
+}
+.btn:hover{
+	cursor: pointer;
+	color:#b20000;
+	font-weight: bold;
+}
 form{
-	height:50%;
+	height:auto;
 	width:25%;
 	padding:2.5%;
-	background-color:#c0c0c0;
+	background-color:#00b259;
 	margin-left:auto;
 	margin-right:auto;
 	margin-top:5%;
+	color:white;
+	font-weight: 1em;
+	font-family: 'Oswald';
+	clear:both;
+	overflow: hidden;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	border: 1px solid black;
+
+}
+form > h4{
+	font-size: 1.5em;
+}
+label {
+  display: inline-block;
+  width: 10em;
+}
+
+input[type="text"] {
+  display: inline-block;
+  width: 90%;
+}
+input[type="submit"]{
+	display: inline-block;
+	width:5em;
 }
 
 /********
@@ -186,8 +235,8 @@ Responsive Slider
   display: block;
   height: auto;
   float: left;
-  width: 100%;
-  border: 1px solid #B20000;
+  width: 90%;
+  border: 10px solid #660000;
   -webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
